[package]
name = "mechanics-http-client"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["metastable-void"]
description = "Small reqwest-shaped HTTP client built on hyper-rustls + webpki-roots, with aws-lc-rs as the sole crypto provider. Bundled Mozilla CA bundle only — no OS-native trust."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/mechanics-http-client"
homepage = "https://github.com/metastable-void/mechanics-http-client"
keywords = ["http", "client", "rustls", "webpki-roots", "aws-lc-rs"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
brotli = "8"
bytes = "1"
flate2 = "1"
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
hickory-resolver = { version = "0.25.2", default-features = false, features = ["system-config", "tokio"], optional = true }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "tls12", "webpki-tokio", "aws-lc-rs"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1", "http2"] }
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "time", "net", "sync"] }
webpki-roots = "1"

[features]
default = ["http3"]
http3 = ["dep:h3", "dep:h3-quinn", "dep:hickory-resolver", "dep:quinn"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "rt-multi-thread"] }
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
