[package]
name = "mechanics-http-client"
version = "0.2.4"
edition = "2024"
rust-version = "1.88"
authors = ["metastable-void"]
description = "Small reqwest-shaped HTTP client built on hyper-rustls + webpki-roots, with aws-lc-rs as the sole crypto provider. Bundled Mozilla CA bundle only — no OS-native trust."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/mechanics-http-client"
homepage = "https://github.com/metastable-void/mechanics-http-client"
keywords = ["http", "client", "rustls", "webpki-roots", "aws-lc-rs"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
brotli = { version = "8", default-features = false, features = ["std"] }
bytes = { version = "1", default-features = false, features = ["std"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
h3 = { version = "0.0.8", default-features = false, features = [], optional = true }
h3-quinn = { package = "mechanics-h3-quinn", version = "0.0.10", default-features = false, features = [], optional = true }
http = { version = "1", default-features = false, features = ["std"] }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false, features = [] }
hyper = { version = "1", default-features = false, features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["aws-lc-rs", "http1", "http2", "tls12", "webpki-tokio"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1", "http2", "tokio"] }
mechanics-dns = { version = "0.1", default-features = false }
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["net", "rt", "sync", "time"] }
tower-service = { version = "0.3", default-features = false }
webpki-roots = { version = "1", default-features = false, features = [] }

[features]
default = ["http3"]
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn"]

[dev-dependencies]
rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs", "pem"] }
tokio = { version = "1", features = ["rt", "macros", "time", "rt-multi-thread"] }
wiremock = { version = "0.6", default-features = false, features = [] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
